# Full-Stack-Todo-App-Hackathon

./: .env.example  .gitignore  AGENT.md  BETTER_AUTH_IMPORT_FIX.md  BETTER_AUTH_VERIFICATION.md  CLAUDE.md  CRUD_ENDPOINT_FIXES.md  FINAL_SETUP_GUIDE.md  FINAL_VERIFICATION.txt  FRONTEND_REVIEW.md  FRONTEND_REVIEW_COMPLETE.md  FRONTEND_STATUS.md  GEMINI.md  IMPLEMENTATION_STATUS.md  ISSUES_FOUND_AND_FIXED.md  JWT_FIX_COMPLETE.md  LOGIN_SIGNUP_404_ANALYSIS.md  MIDDLEWARE_FIX_SUMMARY.md  PACKAGE_VERIFICATION.md  PHASE_2_COMPLETION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RESEARCH_INDEX.md  RESEARCH_READING_GUIDE.md  RESEARCH_SHADCN_DIALOG_POPOVER.md  RESEARCH_SUMMARY.txt  ROOT_CAUSE_ANALYSIS.md  SHADCN_DIALOG_POPOVER_QUICKREF.md  UV_VERIFICATION.md  backend.md  docker-compose.yml  frontend.md  local_deployment.md  package-lock.json  prompt.txt  pyproject.toml  test_report.md  vercel.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
api/: index.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  mcp_server.Dockerfile  migrate_db.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: chat_agent.py
backend/app/api/: __init__.py  auth.py  chat.py  deps.py  todos.py
backend/app/core/: __init__.py  auth.py  config.py  jwks_client.py  security.py
backend/app/models/: __init__.py  chat.py  database.py  todo.py  user.py
backend/app/schemas/: __init__.py  chat.py  todo.py  user.py
backend/mcp/: server.py
backend/mcp_server/: server.py
backend/tests/: test_mcp_server.py  test_mcp_server_e2e.py  test_mcp_server_extra.py
frontend/: .dockerignore  .env.example  .eslintrc.json  .gitignore  .prettierrc  Dockerfile  README.md  components.json  jest.config.js  middleware.ts  next.config.js  package-lock.json  package.json  postcss.config.js  proxy.ts  tailwind.config.ts  test-db-connection.mjs  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Navigation.tsx
frontend/docs/: API_CONTRACT.md  BACKEND_API_CORRECTION.md  FRONTEND_TASKS_ALIGNED.md  JWT_ATTACHMENT.md  JWT_STRUCTURE.md  PHASE_0_VALIDATION_REPORT.md
frontend/lib/: api.ts  auth-client.ts  auth.ts  utils.ts
k8s/: deployment.yaml  hpa.yaml  service.yaml
specs/001-chatbot-enhancements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cli-todo/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
(+172 files in other folders)
