[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo-app"
version = "1.0.0"
description = "CLI Todo application with in-memory storage"
requires-python = ">=3.13"
authors = [
    {name = "AI Assistant", email = "noreply@anthropic.com"}
]
keywords = ["cli", "todo", "task-management"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
todo = "todo_app.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src/todo_app"]

# Task mapping for constitution compliance
# All code in this project maps to Task IDs in specs/001-cli-todo/tasks.md
# See spec.md for feature requirements
