# Task T-202: FastAPI backend project configuration

[project]
name = "evo-todo-backend"
version = "1.0.0"
description = "Phase II Backend: FastAPI with JWT Authentication"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlmodel>=0.0.14",
    "pydantic-settings>=2.1.0",
    "pydantic[email]>=2.0.0",
    "psycopg[binary,pool]>=3.1.0",  # Added pool support for serverless
    "httpx>=0.25.0",
    "PyJWT[crypto]>=2.8.0",
    "modelcontextprotocol>=1.0.1",
    "openai-agents>=0.7.0",
    "fastmcp>=2.14.4",
]

[tool.uv.sources]
